[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ysj <173371929@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.poetry.scripts]
dev="scripts:runserver"
